Added helper scripts for use in automation

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,14 @@
 config/private.yml
 blobs
 dev_releases
-releases/*.tgz
-releases/**/*.tgz
+final_blobs
+releases
+runtime-config.yml
 .dev_builds
-.final_builds/jobs/**/*.tgz
-.final_builds/packages/**/*.tgz
 .DS_Store
+.final_builds
 .idea
+.download
 *.swp
 *~
 *#
